--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "require": {
         "php": ">=8.0",
+        "ext-intl": "*",
         "gettext/gettext": "^5.7"
     },
     "autoload": {
