--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,3 +14,4 @@ jobs:
         uses: docker://vimeo/psalm-github-actions
         with:
           args: --shepherd
+          composer_ignore_platform_reqs: true
